Sorry not sure the reason for these changes. A previous employee did them to make things work for us.

--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
 		
 	<property file="build.properties" />
 	
-	<property name="jmeter.home" value="/opt/jmeter-2.5" />
+	<property name="jmeter.home" value="/Dev/apache-jmeter-2.11" />
 	
 	<property name="src.dir" value="src/protocol/amf" />
 	<property name="lib.dir" value="${jmeter.home}/lib" />
@@ -24,12 +24,6 @@
 	<property name="src.java.version" value="1.5" />
 	<property name="encoding" value="UTF-8" />
 	<property name="includeAntRuntime" value="false" />
-	
-	<!-- Deprecated, thanks a lot Adobe
-	<property name="blazeds.version" value="4.0.0.14931" />
-	<property name="blazeds.core.jar" value="http://maven.springframework.org/external/com/adobe/blazeds/blazeds-core/${blazeds.version}/blazeds-core-${blazeds.version}.jar" />
-	<property name="blazeds.common.jar" value="http://maven.springframework.org/external/com/adobe/blazeds/blazeds-common/${blazeds.version}/blazeds-common-${blazeds.version}.jar" />
-	-->
 	
 	<path id="srcpath">
 		<pathelement location="${src.dir}" />
@@ -89,11 +83,4 @@
 			 basedir="${basedir}"
 			 includes="${pack.dir}/JMeter-AMF.jar,README,LICENSE" />
 	</target>
-	
-	<!--
-	<target name="install-deps" description="Download dependencies">
-		<get src="${blazeds.core.jar}" dest="${lib.ext}" skipexisting="true" />
-		<get src="${blazeds.common.jar}" dest="${lib.ext}" skipexisting="true" />
-	</target>
-	-->
 </project>
